projet_gl/src/test/deca/context/valid/1_03/1_03_3_DeclClass.deca
// Description:
//    Programme test si l'on peut créer des sous-class
//
// Resultats:
//
// Historique:
//    cree le 17/01/2024

class A {}
class B extends A {}
class C extends B {}