projet_gl/src/test/deca/context/invalid/3_05/3_05_1_DeclClass.deca
// Description:
//    problem in Decl Class
//
// Resultats:
//    ligne 14 : Superclass: C is not declared in Environment Type
//
// Historique:
//    cree le 17/01/2024

class A {
    
}

class B extends C {}